<resources>
    <string name="app_name">Flavorful</string>
    <string name="title_discover">Discover</string>
    <string name="title_favorites">Favorites</string>

    <string name="log_in_nav">Log In</string>
    <string name="sign_up_nav">Sign Up</string>
    <string name="login_btn">Login</string>
    <string name="sign_up_btn">Sign Up</string>
    <string name="name_hint">Full Name</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="todo">TODO</string>
    <string name="profile_image_text">Profile Image</string>
    <string name="edit_profile_text">Edit Profile</string>
    <string name="edit_password_text">Edit Password</string>
    <string name="sign_out">Sign Out</string>
    <string name="delete_user">Delete User</string>
    <string name="save">Save</string>
    <string name="no_video_to_display">No Video To Display</string>
    <string name="step_by_step_mode">Step-by-step mode</string>
    <string name="title_favorite">My Recipes</string>

    <string-array name="spinnerValues">
        <item>Popular</item>
        <item>Indian</item>
        <item>Caribbean</item>
        <item>African</item>
        <item>Mexican</item>
        <item>German</item>
    </string-array>

</resources>