<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <ImageView
        android:id="@+id/icon_image"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/app_icon3x"
        android:contentDescription="@string/todo" />

    <EditText
        android:id="@+id/name_text"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/name_hint"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/email_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/signup_btn"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/custom_red"
        android:text="@string/sign_up_btn"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/customYellow"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/email_text"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/password_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/password_text"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/signup_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/sign_up_nav"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/white"
        android:text="@string/sign_up_nav"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/custom_red"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/profile_image"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/login_nav"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:backgroundTint="@color/white"
        android:text="@string/log_in_nav"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/light_reds"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/sign_up_nav"
        app:layout_constraintStart_toEndOf="@+id/sign_up_nav"
        app:layout_constraintTop_toTopOf="@+id/sign_up_nav" />

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:layout_marginStart="72dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/todo"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/name_text"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/image_picker" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:text="@string/profile_image_text"
        app:layout_constraintBottom_toBottomOf="@+id/profile_image"
        app:layout_constraintStart_toEndOf="@+id/profile_image"
        app:layout_constraintTop_toTopOf="@+id/profile_image"
        app:layout_constraintVertical_bias="0.509" />

</androidx.constraintlayout.widget.ConstraintLayout>