<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <Button
        android:id="@+id/saveChanges_btn"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/custom_red"
        android:text="@string/save"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/customYellow"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_editText" />

    <EditText
        android:id="@+id/name_editText"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="73dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="73dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/name_hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPassword_btn" />

    <EditText
        android:id="@+id/email_editText"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="73dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="73dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_editText" />

    <Button
        android:id="@+id/editPassword_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="155dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="156dp"
        android:backgroundTint="@color/white"
        android:text="@string/edit_password_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/custom_red"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pro_profileName_text" />

    <Button
        android:id="@+id/deleteUser_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="155dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="156dp"
        android:backgroundTint="@color/white"
        android:text="@string/delete_user"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/custom_red"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saveChanges_btn" />

    <Button
        android:id="@+id/signOut_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="155dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="156dp"
        android:backgroundTint="@color/white"
        android:text="@string/sign_out"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/custom_red"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deleteUser_btn" />

    <TextView
        android:id="@+id/pro_profileName_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="174dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="174dp"
        android:text="@string/name_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pro_profileImage_view" />

    <ImageView
        android:id="@+id/pro_profileImage_view"
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/todo"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/image_picker" />

</androidx.constraintlayout.widget.ConstraintLayout>