<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/password_text"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/login_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/icon_image"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/flavorful_icon"
        />

    <EditText
        android:id="@+id/email_text"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/password_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:backgroundTint="@color/custom_red"
        android:text="@string/login_btn"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/customYellow"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/login_nav"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginBottom="60dp"
        android:backgroundTint="@color/white"
        android:text="@string/log_in_nav"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/custom_red"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/email_text"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/sign_up_nav"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginBottom="60dp"
        android:backgroundTint="@color/white"
        android:text="@string/sign_up_nav"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/light_reds"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/email_text"
        app:layout_constraintStart_toEndOf="@+id/login_nav" />


</androidx.constraintlayout.widget.ConstraintLayout>