<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.favorites.FavoritesFragment">

    <Button
        android:id="@+id/editPassword_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="155dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="156dp"
        android:backgroundTint="@color/white"
        android:text="@string/edit_profile_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/custom_red"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pro_profileEmail_text" />

    <TextView
        android:id="@+id/pro_profileName_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="174dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="174dp"
        android:text="@string/name_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pro_profileImage_view" />

    <TextView
        android:id="@+id/pro_profileEmail_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="188dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="188dp"
        android:text="@string/email_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pro_profileName_text" />

    <ImageView
        android:id="@+id/pro_profileImage_view"
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/todo"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/image_picker" />

    <GridView
        android:id="@+id/gridView_discover"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:numColumns="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPassword_btn">

    </GridView>
</androidx.constraintlayout.widget.ConstraintLayout>